gen/DoplerParser.java
// Generated from DoplerParser.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class DoplerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CR=1, LF=2, QUESTION_KEY=3, QUESTION=4, TYPE_KEY=5, RANGE_KEY=6, CARDINALITY_KEY=7, 
		CONSTRAINT_RULE_KEY=8, VISIBLE_RELEVANT_KEY=9, DOPLER_KEY=10, WS_DEFAULT=11, 
		WS_JSON=12, ALLOW=13, DISALLOW=14, ISTAKEN=15, GETVALUE=16, EQUALS=17, 
		GREATER_THAN=18, LESS_THAN=19, LESS_EQUALS=20, GREATER_EQUALS=21, OR=22, 
		AND=23, XOR=24, PIPE=25, SET=26, NOT=27, MINUS=28, LPAREN=29, RPAREN=30, 
		LBRACE=31, RBRACE=32, COLON=33, IF=34, ANPERSAND=35, PERCENT=36, COMMA=37, 
		SEMICOLON=38, DQ=39, BooleanLiteralExpression=40, TRUE=41, FALSE=42, DoubleLiteralExpression=43, 
		EnumerationLiteralExpression=44, StringLiteralExpression=45, StringDecision=46, 
		NumberDecision=47, EnumerationDecision=48, ENUMERATION=49, BooleanDecision=50, 
		SPECIAL_CHAR=51, IDENTIFIER=52;
	public static final int
		RULE_document = 0, RULE_jsonDocument = 1, RULE_jsonValue = 2, RULE_jsonObject = 3, 
		RULE_jsonPair = 4, RULE_csvFile = 5, RULE_hdr = 6, RULE_row = 7, RULE_field = 8, 
		RULE_header = 9, RULE_id = 10, RULE_cardinality = 11, RULE_question = 12, 
		RULE_range = 13, RULE_rangeItem = 14, RULE_specialCharacter = 15, RULE_subrange = 16, 
		RULE_expression = 17, RULE_unaryExpression = 18, RULE_decisionVisibilityCallExpression = 19, 
		RULE_isTaken = 20, RULE_decisionValueCallExpression = 21, RULE_binaryExpression = 22, 
		RULE_andExpression = 23, RULE_orExpression = 24, RULE_xorExpression = 25, 
		RULE_equalityExpression = 26, RULE_greaterThanExpression = 27, RULE_lessThanExpression = 28, 
		RULE_greaterEqualsExpression = 29, RULE_lessEqualsExpression = 30, RULE_literalExpression = 31, 
		RULE_enumerationLiteralExpression = 32, RULE_booleanLiteralExpression = 33, 
		RULE_stringLiteralExpression = 34, RULE_doubleLiteralExpression = 35, 
		RULE_decisionType = 36, RULE_rule = 37, RULE_action = 38, RULE_valueRestrictionAction = 39, 
		RULE_allows = 40, RULE_disallows = 41, RULE_enForce = 42, RULE_enumEnForce = 43, 
		RULE_stringEnForce = 44, RULE_booleanEnForce = 45, RULE_doubleEnForce = 46;
	private static String[] makeRuleNames() {
		return new String[] {
			"document", "jsonDocument", "jsonValue", "jsonObject", "jsonPair", "csvFile", 
			"hdr", "row", "field", "header", "id", "cardinality", "question", "range", 
			"rangeItem", "specialCharacter", "subrange", "expression", "unaryExpression", 
			"decisionVisibilityCallExpression", "isTaken", "decisionValueCallExpression", 
			"binaryExpression", "andExpression", "orExpression", "xorExpression", 
			"equalityExpression", "greaterThanExpression", "lessThanExpression", 
			"greaterEqualsExpression", "lessEqualsExpression", "literalExpression", 
			"enumerationLiteralExpression", "booleanLiteralExpression", "stringLiteralExpression", 
			"doubleLiteralExpression", "decisionType", "rule", "action", "valueRestrictionAction", 
			"allows", "disallows", "enForce", "enumEnForce", "stringEnForce", "booleanEnForce", 
			"doubleEnForce"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'\"Question\":'", null, "'Type'", "'Range'", "'Cardinality'", 
			"'Constraint/Rule'", "'Visible/relevant if'", "'DOPLER'", null, null, 
			null, null, null, null, "'=='", "'>'", "'<'", "'<='", "'>='", "'||'", 
			"'&&'", "'^'", "'|'", "'='", "'!'", "'-'", "'('", "')'", "'{'", "'}'", 
			"':'", "'if'", "'&'", "'%'", "','", "';'", "'\"'", null, null, null, 
			null, null, null, "'String'", "'Double'", null, "'Enumeration'", "'Boolean'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CR", "LF", "QUESTION_KEY", "QUESTION", "TYPE_KEY", "RANGE_KEY", 
			"CARDINALITY_KEY", "CONSTRAINT_RULE_KEY", "VISIBLE_RELEVANT_KEY", "DOPLER_KEY", 
			"WS_DEFAULT", "WS_JSON", "ALLOW", "DISALLOW", "ISTAKEN", "GETVALUE", 
			"EQUALS", "GREATER_THAN", "LESS_THAN", "LESS_EQUALS", "GREATER_EQUALS", 
			"OR", "AND", "XOR", "PIPE", "SET", "NOT", "MINUS", "LPAREN", "RPAREN", 
			"LBRACE", "RBRACE", "COLON", "IF", "ANPERSAND", "PERCENT", "COMMA", "SEMICOLON", 
			"DQ", "BooleanLiteralExpression", "TRUE", "FALSE", "DoubleLiteralExpression", 
			"EnumerationLiteralExpression", "StringLiteralExpression", "StringDecision", 
			"NumberDecision", "EnumerationDecision", "ENUMERATION", "BooleanDecision", 
			"SPECIAL_CHAR", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DoplerParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DoplerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DocumentContext extends ParserRuleContext {
		public JsonDocumentContext jsonDocument() {
			return getRuleContext(JsonDocumentContext.class,0);
		}
		public CsvFileContext csvFile() {
			return getRuleContext(CsvFileContext.class,0);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DoplerParserListener ) ((DoplerParserListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DoplerParserListener ) ((DoplerParserListener)listener).exitDocument(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				jsonDocument();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				csvFile();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JsonDocumentContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(DoplerParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(DoplerParser.RBRACE, 0); }
		public TerminalNode EOF() { return getToken(DoplerParser.EOF, 0); }
		public JsonValueContext jsonValue() {
			return getRuleContext(JsonValueContext.class,0);
		}
		public JsonDocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonDocument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DoplerParserListener ) ((DoplerParserListener)listener).enterJsonDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DoplerParserListener ) ((DoplerParserListener)listener).exitJsonDocument(this);
		}
	}

	public final JsonDocumentContext jsonDocument() throws RecognitionException {
		JsonDocumentContext _localctx = new JsonDocumentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_jsonDocument);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(LBRACE);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACE || _la==DQ) {
				{
				setState(99);
				jsonValue();
				}
			}

			setState(102);
			match(RBRACE);
			setState(103);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JsonValueContext extends ParserRuleContext {
		public List<TerminalNode> DQ() { return getTokens(DoplerParser.DQ); }
		public TerminalNode DQ(int i) {
			return getToken(DoplerParser.DQ, i);
		}
		public TerminalNode DOPLER_KEY() { return getToken(DoplerParser.DOPLER_KEY, 0); }
		public TerminalNode COLON() { return getToken(DoplerParser.COLON, 0); }
		public TerminalNode LBRACE() { return getToken(DoplerParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(DoplerParser.RBRACE, 0); }
		public List<JsonObjectContext> jsonObject() {
			return getRuleContexts(JsonObjectContext.class);
		}
		public JsonObjectContext jsonObject(int i) {
			return getRuleContext(JsonObjectContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DoplerParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DoplerParser.COMMA, i);
		}
		public JsonValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DoplerParserListener ) ((DoplerParserListener)listener).enterJsonValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DoplerParserListener ) ((DoplerParserListener)listener).exitJsonValue(this);
		}
	}

	public final JsonValueContext jsonValue() throws RecognitionException {
		JsonValueContext _localctx = new JsonValueContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_jsonValue);
		int _la;
		try {
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DQ:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				match(DQ);
				setState(106);
				match(DOPLER_KEY);
				setState(107);
				match(DQ);
				setState(108);
				match(COLON);
				setState(109);
				match(LBRACE);
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==LBRACE || _la==DQ) {
					{
					{
					setState(110);
					jsonObject();
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==COMMA) {
						{
						setState(111);
						match(COMMA);
						}
					}

					}
					}
					setState(118);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(119);
				match(RBRACE);
				}
				break;
			case LBRACE:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				match(LBRACE);
				setState(121);
				match(RBRACE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JsonObjectContext extends ParserRuleContext {
		public List<TerminalNode> DQ() { return getTokens(DoplerParser.DQ); }
		public TerminalNode DQ(int i) {
			return getToken(DoplerParser.DQ, i);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode COLON() { return getToken(DoplerParser.COLON, 0); }
		public TerminalNode LBRACE() { return getToken(DoplerParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(DoplerParser.RBRACE, 0); }
		public List<JsonPairContext> jsonPair() {
			return getRuleContexts(JsonPairContext.class);
		}
		public JsonPairContext jsonPair(int i) {
			return getRuleContext(JsonPairContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DoplerParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DoplerParser.COMMA, i);
		}
		public JsonObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonObject; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DoplerParserListener ) ((DoplerParserListener)listener).enterJsonObject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DoplerParserListener ) ((DoplerParserListener)listener).exitJsonObject(this);
		}
	}

	public final JsonObjectContext jsonObject() throws RecognitionException {
		JsonObjectContext _localctx = new JsonObjectContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_jsonObject);
		int _la;
		try {
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DQ:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				match(DQ);
				setState(125);
				id();
				setState(126);
				match(DQ);
				setState(127);
				match(COLON);
				setState(128);
				match(LBRACE);
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==QUESTION_KEY || _la==DQ) {
					{
					{
					setState(129);
					jsonPair();
					setState(131);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==COMMA) {
						{
						setState(130);
						match(COMMA);
						}
					}

					}
					}
					setState(137);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(138);
				match(RBRACE);
				}
				break;
			case LBRACE:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				match(LBRACE);
				setState(141);
				match(RBRACE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JsonPairContext extends ParserRuleContext {
		public TerminalNode QUESTION_KEY() { return getToken(DoplerParser.QUESTION_KEY, 0); }
		public List<TerminalNode> DQ() { return getTokens(DoplerParser.DQ); }
		public TerminalNode DQ(int i) {
			return getToken(DoplerParser.DQ, i);
		}
		public QuestionContext question() {
			return getRuleContext(QuestionContext.class,0);
		}
		public TerminalNode TYPE_KEY() { return getToken(DoplerParser.TYPE_KEY, 0); }
		public TerminalNode COLON() { return getToken(DoplerParser.COLON, 0); }
		public DecisionTypeContext decisionType() {
			return getRuleContext(DecisionTypeContext.class,0);
		}
		public TerminalNode RANGE_KEY() { return getToken(DoplerParser.RANGE_KEY, 0); }
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public TerminalNode CARDINALITY_KEY() { return getToken(DoplerParser.CARDINALITY_KEY, 0); }
		public CardinalityContext cardinality() {
			return getRuleContext(CardinalityContext.class,0);
		}
		public TerminalNode CONSTRAINT_RULE_KEY() { return getToken(DoplerParser.CONSTRAINT_RULE_KEY, 0); }
		public RuleContext rule_() {
			return getRuleContext(RuleContext.class,0);
		}
		public TerminalNode VISIBLE_RELEVANT_KEY() { return getToken(DoplerParser.VISIBLE_RELEVANT_KEY, 0); }
		public DecisionVisibilityCallExpressionContext decisionVisibilityCallExpression() {
			return getRuleContext(DecisionVisibilityCallExpressionContext.class,0);
		}
		public JsonPairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonPair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DoplerParserListener ) ((DoplerParserListener)listener).enterJsonPair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DoplerParserListener ) ((DoplerParserListener)listener).exitJsonPair(this);
		}
	}

	public final JsonPairContext jsonPair() throws RecognitionException {
		JsonPairContext _localctx = new JsonPairContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_jsonPair);
		try {
			setState(211);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				match(QUESTION_KEY);
				setState(145);
				match(DQ);
				setState(150);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(146);
					question();
					}
					break;
				case 2:
					{
					setState(147);
					match(DQ);
					setState(148);
					match(DQ);
					}
					break;
				case 3:
					{
					}
					break;
				}
				setState(152);
				match(DQ);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(153);
				match(DQ);
				setState(154);
				match(TYPE_KEY);
				setState(155);
				match(DQ);
				setState(156);
				match(COLON);
				setState(157);
				match(DQ);
				setState(162);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(158);
					decisionType();
					}
					break;
				case 2:
					{
					setState(159);
					match(DQ);
					setState(160);
					match(DQ);
					}
					break;
				case 3:
					{
					}
					break;
				}
				setState(164);
				match(DQ);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(165);
				match(DQ);
				setState(166);
				match(RANGE_KEY);
				setState(167);
				match(DQ);
				setState(168);
				match(COLON);
				setState(169);
				match(DQ);
				setState(174);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(170);
					range();
					}
					break;
				case 2:
					{
					setState(171);
					match(DQ);
					setState(172);
					match(DQ);
					}
					break;
				case 3:
					{
					}
					break;
				}
				setState(176);
				match(DQ);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(177);
				match(DQ);
				setState(178);
				match(CARDINALITY_KEY);
				setState(179);
				match(DQ);
				setState(180);
				match(COLON);
				setState(181);
				match(DQ);
				setState(186);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(182);
					cardinality();
					}
					break;
				case 2:
					{
					setState(183);
					match(DQ);
					setState(184);
					match(DQ);
					}
					break;
				case 3:
					{
					}
					break;
				}
				setState(188);
				match(DQ);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(189);
				match(DQ);
				setState(190);
				match(CONSTRAINT_RULE_KEY);
				setState(191);
				match(DQ);
				setState(192);
				match(COLON);
				setState(197);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(193);
					rule_(0);
					}
					break;
				case 2:
					{
					setState(194);
					match(DQ);
					setState(195);
					match(DQ);
					}
					break;
				case 3:
					{
					}
					break;
				}
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(199);
				match(DQ);
				setState(200);
				match(VISIBLE_RELEVANT_KEY);
				setState(201);
				match(DQ);
				setState(202);
				match(COLON);
				setState(203);
				match(DQ);
				setState(208);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
				case 1:
					{
					setState(204);
					decisionVisibilityCallExpression();
					}
					break;
				case 2:
					{
					setState(205);
					match(DQ);
					setState(206);
					match(DQ);
					}
					break;
				case 3:
					{
					}
					break;
				}
				setState(210);
				match(DQ);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CsvFileContext extends ParserRuleContext {
		public HdrContext hdr() {
			return getRuleContext(HdrContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DoplerParser.EOF, 0); }
		public List<RowContext> row() {
			return getRuleContexts(RowContext.class);
		}
		public RowContext row(int i) {
			return getRuleContext(RowContext.class,i);
		}
		public CsvFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_csvFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DoplerParserListener ) ((DoplerParserListener)listener).enterCsvFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DoplerParserListener ) ((DoplerParserListener)listener).exitCsvFile(this);
		}
	}

	public final CsvFileContext csvFile() throws RecognitionException {
		CsvFileContext _localctx = new CsvFileContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_csvFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(213);
			hdr();
			setState(215); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(214);
				row();
				}
				}
				setState(217); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 8437651828999166L) != 0) );
			setState(219);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HdrContext extends ParserRuleContext {
		public RowContext row() {
			return getRuleContext(RowContext.class,0);
		}
		public HdrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hdr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DoplerParserListener ) ((DoplerParserListener)listener).enterHdr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DoplerParserListener ) ((DoplerParserListener)listener).exitHdr(this);
		}
	}

	public final HdrContext hdr() throws RecognitionException {
		HdrContext _localctx = new HdrContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_hdr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(221);
			row();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RowContext extends ParserRuleContext {
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public TerminalNode LF() { return getToken(DoplerParser.LF, 0); }
		public List<TerminalNode> SEMICOLON() { return getTokens(DoplerParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(DoplerParser.SEMICOLON, i);
		}
		public TerminalNode CR() { return getToken(DoplerParser.CR, 0); }
		public RowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_row; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DoplerParserListener ) ((DoplerParserListener)listener).enterRow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DoplerParserListener ) ((DoplerParserListener)listener).exitRow(this);
		}
	}

	public final RowContext row() throws RecognitionException {
		RowContext _localctx = new RowContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_row);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(223);
			field();
			setState(228);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMICOLON) {
				{
				{
				setState(224);
				match(SEMICOLON);
				setState(225);
				field();
				}
				}
				setState(230);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(232);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CR) {
				{
				setState(231);
				match(CR);
				}
			}

			setState(234);
			match(LF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
